objects/TRIP__c.object
<CustomObject>
    <fields>
        <fullName>AIRCRAFT__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>AIRCRAFT</label>
        <referenceTo>AIRCRAFT__c</referenceTo>
        <relationshipLabel>TRIPS</relationshipLabel>
        <relationshipName>TRIPS</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Second_in_Command__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Second in Command</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TRIPS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trip_Date__c</fullName>
        <label>Trip Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Trip_Route__c</fullName>
        <label>Trip Route</label>
        <length>140</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trip_Status__c</fullName>
        <label>Trip Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>TRIP</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AIRCRAFT__c</columns>
        <columns>Trip_Date__c</columns>
        <columns>Trip_Route__c</columns>
        <columns>Trip_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>TRIP Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TRIPS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Rules_date</fullName>
        <active>true</active>
        <errorConditionFormula>DATEVALUE(Trip_Date__c) - TODAY() &lt; 1</errorConditionFormula>
        <errorMessage>Trip date must greater than today</errorMessage>
    </validationRules>
</CustomObject>